[package]
name = "iron_test"
version = "0.1.0"
authors = ["Elliot Snow-Kropla <esnowkropla@gmail.com>"]

[dependencies]
iron = "*"
staticfile = "*"
mount = "*"
router = "*"
logger = "*"
env_logger = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
chrono = { version = "*", features = ["serde"]}
uuid = { version = "*", features = ["serde", "v4"]}

[dependencies.rusqlite]
version = "0.12.0"
features = ["bundled"]